--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -104,8 +104,8 @@ font:
     # family: CodeNewRoman Nerd Font
     # family: RobotoMono Nerd Font
     # family: Hack
-    # family: JetBrains Mono
-    family: UbuntuMono Nerd Font
+    family: JetBrainsMono Nerd Font
+    # family: UbuntuMono Nerd Font
     # family: Monofur Nerd Font
     # family: TerminessTTF Nerd Font
     # family: MesloLGS NF
@@ -123,8 +123,8 @@ font:
     # family: CodeNewRoman Nerd Font
     # family: RobotoMono Nerd Font
     # family: Hack
-    # family: JetBrains Mono
-    family: UbuntuMono Nerd Font
+    family: JetBrainsMono Nerd Font
+    # family: UbuntuMono Nerd Font
     # family: Monofur Nerd Font
     # family: TerminessTTF Nerd Font
     #family: Monospace
@@ -142,7 +142,8 @@ font:
     # family: RobotoMono Nerd Font
     # family: Hack
     # family: JetBrains Mono
-    family: UbuntuMono Nerd Font
+    family: JetBrainsMono Nerd Font
+    # family: UbuntuMono Nerd Font
     # family: Monofuritalic Nerd Font Mono
     # family: TerminessTTF Nerd Font
     #family: Monospace
@@ -160,7 +161,8 @@ font:
     # family: RobotoMono Nerd Font
     # family: Hack
     # family: JetBrains Mono
-    family: UbuntuMono Nerd Font
+    family: JetBrainsMono Nerd Font
+    # family: UbuntuMono Nerd Font
     # family: Monofuritalic Nerd Font Mono
     # family: TerminessTTF Nerd Font
     #family: Monospace
@@ -255,9 +257,9 @@ colors:
 # Background opacity
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
-# The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.95
-# background_opacity: 0.80
+# The value `0.0` is completely transparent and `1.0` is opaque
+window:
+    opacity: 0.95
 #selection:
 #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
 # When set to `true`, selected text will be copied to the primary clipboard.
