--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -12,7 +12,7 @@ screenshot-png-compression=3
 
 ## yt-dlp
 hls-bitrate=max
-ytdl-format=bestvideo[height<=?1080][vcodec!=vp9]+bestaudio/bestvideo+bestaudio/best
+#ytdl-format=bestvideo[height<=?1080][vcodec!=vp9]+bestaudio/bestvideo+bestaudio/best
 load-unsafe-playlists=no
 
 
