many changes, removed mpv thumbnail & recent scripts

--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -1,3 +1,4 @@
+# Defaults: https://github.com/mpv-player/mpv/blob/master/etc/input.conf
 ctrl+t script-binding generate-thumbnails
 
 # increase subtitle font size
@@ -13,3 +14,9 @@ K cycle audio down
 #change volume
 UP 		add volume 2
 DOWN 	add volume -2
+
+# Seek by exactly 5s instead of relative+keyframes 10s
+RIGHT seek  5 exact            # forward
+LEFT  seek -5 exact            # backward
+WHEEL_UP      seek  5 exact    # forward
+WHEEL_DOWN    seek -5 exact    # backward
