--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,9 +1,15 @@
 # general
 osc=no
 hwdec=auto
+#toggling border=no increases mpv cpu usage by 4x
+#border=no 
+#keep-open=yes
+keepaspect-window=no
+
 
 
 ## screenshot
+screenshot-template="%F - [%P]v%#01n"
 screenshot-format=png
 screenshot-high-bit-depth=yes
 screenshot-tag-colorspace=yes
@@ -12,8 +18,9 @@ screenshot-png-compression=3
 
 ## yt-dlp
 hls-bitrate=max
-#ytdl-format=bestvideo[height<=?1080][vcodec!=vp9]+bestaudio/bestvideo+bestaudio/best
-load-unsafe-playlists=no
+ytdl-format=bestvideo[height<=?1080][vcodec!=vp9]+bestaudio/bestvideo+bestaudio/best
+##script-opts-append=ytdl_hook-ytdl_path=yt-dlp
+#load-unsafe-playlists=no
 
 
 ## priority
@@ -39,6 +46,7 @@ sub-ass-vsfilter-blur-compat=no
 sub-fix-timing=yes
 #sub-auto=fuzzy
 #blend-subtitles=yes
+osd-font-size=35
 
 
 [ww-ext-image]
