--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,7 +1,7 @@
 # general
 osc=no
 hwdec=auto
-#toggling border=no increases mpv cpu usage by 4x
+#toggling border=no increases mpv cpu usage by 4x (not anymore?) still toglling fullscreen is laggy
 #border=no 
 #keep-open=yes
 keepaspect-window=no
@@ -61,6 +61,8 @@ profile=ww-ext-image
 [extension.gif]
 profile=ww-ext-image
 [extension.jpeg]
+profile=ww-ext-image
+[extension.mjpeg]
 profile=ww-ext-image
 [extension.jpg]
 profile=ww-ext-image
