--- a/sway/config
+++ b/sway/config
@@ -9,6 +9,7 @@ default_floating_border pixel 2 #disable floating windows titlebar
 font pango:DejaVu Sans Mono 12
 #align  title
 title_align center
+#exec /usr/share/sway-git/scripts/inactive-windows-transparency.py --opacity 0.85
 
 # class                 border  backgr. text    indicator child_border
 client.focused          #0039e6 #315B30 #ffffff #2e9ef4   #0039e6
@@ -42,14 +43,14 @@ set $right l
 
 set $filemanager nautilus
 set $browser librewolf
-set $term foot
-set $mediaplayer foot -e ncspot
+set $term footclient
+set $mediaplayer footclient -e ncspot
 set $mail mailspring
 
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
-# on the original workspace that the command was run on.
-set $menu wofi --show drun -i | xargs swaymsg exec --
+#set $menu wofi --show drun -i | xargs swaymsg exec --
+set $menu fuzzel -i Tela-circle-dark -b 1a1a1aff --font='Hack:weight=bold:size=13'
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
@@ -66,6 +67,7 @@ output * bg ~/Pictures/Wallpapers/wallpaper fill
 # Example configuration:
 #
 exec swayidle -w \
+         timeout 290 'notify-send "Locking screen in 10 seconds" ' \
          timeout 300 'swaylock -f' \
          timeout 310 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
          before-sleep 'swaylock -f'
@@ -88,12 +90,20 @@ exec swayidle -w \
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
 
-#disable mouse acceleration
+# disable mouse acceleration
 
 input * accel_profile flat
 
+input "6392:4742:input-remapper_USB_GAMING_MOUSE__forwarded" {
+    scroll_factor 1.3
+}
+
 #enable numlock in keyboard
-input 1:1:AT_Translated_Set_2_keyboard xkb_numlock enabled
+input "1:1:AT_Translated_Set_2_keyboard" {
+    repeat_delay 300
+    repeat_rate 30
+    xkb_numlock enabled
+}
 
 ### Key bindings
 #
@@ -147,6 +157,7 @@ input 1:1:AT_Translated_Set_2_keyboard xkb_numlock enabled
 # Workspaces:
 #
     # Switch to workspace
+    bindsym $mod+grave workspace back_and_forth
     bindsym $mod+1 workspace number 1
     bindsym $mod+2 workspace number 2
     bindsym $mod+3 workspace number 3
@@ -156,7 +167,7 @@ input 1:1:AT_Translated_Set_2_keyboard xkb_numlock enabled
     bindsym $mod+7 workspace number 7
     bindsym $mod+8 workspace number 8
     bindsym $mod+9 workspace number 9
-    bindsym $mod+0 workspace number 10
+    bindsym $mod+0 [urgent=latest] focus
     # Move focused container to workspace
     bindsym $mod+Shift+1 move container to workspace number 1
     bindsym $mod+Shift+2 move container to workspace number 2
@@ -167,7 +178,7 @@ input 1:1:AT_Translated_Set_2_keyboard xkb_numlock enabled
     bindsym $mod+Shift+7 move container to workspace number 7
     bindsym $mod+Shift+8 move container to workspace number 8
     bindsym $mod+Shift+9 move container to workspace number 9
-    bindsym $mod+Shift+0 move container to workspace number 10
+#    bindsym $mod+Shift+0 move container to workspace number 10
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
 #
@@ -190,6 +201,10 @@ input 1:1:AT_Translated_Set_2_keyboard xkb_numlock enabled
     # Toggle the current focus between tiling and floating mode
     bindsym $mod+space floating toggle
 
+
+    # Toggle the current focus between sticky and non sticky mode
+    bindsym $mod+y sticky toggle
+
     # Swap focus between the tiling area and the floating area
     bindsym $mod+Shift+space focus mode_toggle
 
@@ -208,8 +223,11 @@ input 1:1:AT_Translated_Set_2_keyboard xkb_numlock enabled
     bindsym $mod+Shift+n scratchpad show, floating toggle 
 #
 # Resizing containers:
-#
-mode "resize" {
+
+
+set $mode_resize resize mode: h|j|k|l
+bindsym $mod+ctrl+r mode "$mode_resize"
+mode "$mode_resize" {
     # left will shrink the containers width
     # right will grow the containers width
     # up will shrink the containers height
@@ -229,7 +247,6 @@ mode "resize" {
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
-bindsym $mod+ctrl+r mode "resize"
 
 #Use waybar
 bar {
@@ -246,8 +263,27 @@ bindsym $mod+Shift+i exec swaync-client -t -sw
 include /etc/sway/config.d/*
 
 #My Bindings
+# install ttf-font-awesome 6.xx
+bindsym $mod+x exec waylogout \
+                    --hide-cancel \
+                    --screenshots \
+                    --font="Baloo 2" \
+                    --effect-blur=7x5 \
+                    --indicator-thickness=10 \
+                    --ring-color=888888aa \
+                    --inside-color=1a1a1aff  \
+                    --text-color=eaeaeaaa \
+                    --line-color=00000000 \
+                    --ring-selection-color=ff5500aa \
+                    --inside-selection-color=1a1a1aff \
+                    --text-selection-color=eaeaeaaa \
+                    --line-selection-color=00000000 \
+                    --lock-command="/sbin/swaylock" \
+                    --logout-command="/sbin/swaymsg exit" \
+                    --poweroff-command="/sbin/shutdown -a now" \
+                    --reboot-command="/sbin/shutdown -r now" \
+                    --selection-label
 
-bindsym $mod+x exec wlogout
 #bindsym $mod+v exec copyq toggle
 bindsym $mod+v exec clipman pick --tool=wofi
 
@@ -256,7 +292,7 @@ bindsym $mod+v exec clipman pick --tool=wofi
 bindsym Control+Shift+t workspace next
 bindsym Control+Shift+y workspace prev
 
-bindsym $mod+F3 exec playerctl play-pause 
+#bindsym $mod+F3 exec playerctl play-pause 
 bindsym Control+Alt+w exec $browser
 bindsym Control+Alt+b exec $filemanager 
 bindsym Control+Alt+m exec $mail 
@@ -301,10 +337,7 @@ bindsym $mod+Shift+F12 exec ~/.config/sway/record.sh -g
 #Startup Apps
 
 #exec --no-startup-id qbittorrent
-#exec --no-startup-id com.github.alainm23.planner
-exec --no-startup-id input-remapper-control --command autoload
-#exec_always --no-startup-id copyq
-#exec --no-startup-id gammastep-indicator
+#exec --no-startup-id input-remapper-control --command autoload
 #exec --no-startup-id xhost +SI:localuser:root          #fix cannot open display: :0 error
 #better and secure alternative is using a polkit as mentioned here 
 #    https://www.reddit.com/r/swaywm/comments/r1218i/this_is_my_sway_is_fantastic_post/
@@ -312,14 +345,24 @@ exec --no-startup-id input-remapper-control --command autoload
 exec --no-startup-id xrdb -merge ~/.Xresources          #use colours and font from Xdefaults ( for sxiv and other apps )
 exec --no-startup-id wl-paste -t text --watch clipman store --max-items=30
 exec --no-startup-id autotiling
+#this is really cool
+exec --no-startup-id playerctld daemon
+exec --no-startup-id foot --server
+exec --no-startup-id ~/scripts/fuckem.sh
+exec --no-startup-id gammastep -l 29.9:78.0
+exec --no-startup-id nwg-wrapper -s ~/scripts/nwg.sh -p top -a start -r 10000
 #using mpvpaper as live wallpaper ( nvm it fills my swap and then fucks my pc, will try it later when its fixed or i will fix it myself & send pr )
 #exec --no-startup-id ~/.config/sway/wallpaper.sh -v
 
 
 #Start window in floating mode
 for_window [app_id="copyq"] floating enable
+for_window [app_id="io.bassi.Amberol"] floating enable
 for_window [app_id="gnome-pomodoro"] floating enable
 for_window [app_id="org.gnome.clocks"] floating enable
-
+for_window [app_id="connman-gtk"] floating enable
+for_window [app_id="foot"] opacity 0.98
 #Open programs in different workspace
 for_window [app_id="org.qbittorrent.qBittorrent"] move to workspace 4
+
+for_window [app_id="^mpv$"] inhibit_idle fullscreen
