--- a/waybar/config
+++ b/waybar/config
@@ -76,7 +76,7 @@
         "bat": "BAT2"
     },
     "network": {
-        "interface": "enp2s0", // (Optional) To force the use of this interface
+    //  "interface": "enp2s0", // (Optional) To force the use of this interface
         "format-wifi": " {bandwidthDownBits} | ︁ {bandwidthUpBits}",
         "format-linked": "{ifname} (No IP) ",
         "format-ethernet": " {bandwidthDownBits} | ︁ {bandwidthUpBits}",
@@ -85,7 +85,7 @@
         "format-disconnected": "Disconnected",
     //  "format-wifi": "{essid} ({signalStrength}%) ",
     //  "format-alt": "{essid} ({signalStrength}%) ",
-        "format-alt": "{ifname}: {ipaddr}{cidr} "
+        "format-alt": "{ifname}: {ipaddr}/{cidr} "
 
     },
     "pulseaudio": {
