--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -8,10 +8,10 @@
 # title=foot
 # locked-title=no
 
-font=JetBrainsMono Nerd Font:style=Regular:size=14
-font-bold=JetBrainsMono Nerd Font:style=Bold:size=14
-font-italic=JetBrainsMono Nerd Font:style=Italic:size=14
-font-bold-italic=JetBrainsMono Nerd Font:style=Bold Italic:size=14
+font=JetBrains Mono :style=Regular:size=12
+font-bold=JetBrains Mono :style=Bold:size=12
+font-italic=JetBrains Mono :style=Italic:size=12
+font-bold-italic=JetBrains Mono :style=Bold Italic:size=12
 # line-height=<font metrics>
 # letter-spacing=0
 # horizontal-letter-offset=0
@@ -64,29 +64,49 @@ color=1c1c1c c5c5c5
 # alternate-scroll-mode=yes
 
 [colors]
-# alpha=1.0
-foreground=c5c5c5
-background=1c1c1c
+foreground=cdd6f4 # Text
+background=1e1e2e # Base
+regular0=45475a   # Surface 1
+regular1=f38ba8   # red
+regular2=a6e3a1   # green
+regular3=f9e2af   # yellow
+regular4=89b4fa   # blue
+regular5=f5c2e7   # pink
+regular6=94e2d5   # teal
+regular7=bac2de   # Subtext 1
+bright0=585b70    # Surface 2
+bright1=f38ba8    # red
+bright2=a6e3a1    # green
+bright3=f9e2af    # yellow
+bright4=89b4fa    # blue
+bright5=f5c2e7    # pink
+bright6=94e2d5    # teal
+bright7=a6adc8    # Subtext 0
 
-## Normal/regular colors (color palette 0-7)
-regular0=1c1c1c     # black
-regular1=ff005b     # red
-regular2=cee318     # green
-regular3=ffe755     # yellow
-regular4=048ac7     # blue
-regular5=833c9f     # magenta
-regular6=0ac1cd     # cyan
-regular7=e5e5e5     # white
-
-## Bright colors (color palette 8-15)
-bright0=666666      # bright black
-bright1=ff00a0      # bright red
-bright2=ccff00      # bright green
-bright3=ff9f00      # bright yellow
-bright4=48c6ff      # bright blue
-bright5=be67e1      # bright magenta
-bright6=63e7f0      # bright cyan
-bright7=f3f3f3      # bright white
+#[colors]
+## alpha=1.0
+#foreground=c5c5c5
+#background=1c1c1c
+#
+### Normal/regular colors (color palette 0-7)
+#regular0=1c1c1c     # black
+#regular1=ff005b     # red
+#regular2=cee318     # green
+#regular3=ffe755     # yellow
+#regular4=048ac7     # blue
+#regular5=833c9f     # magenta
+#regular6=0ac1cd     # cyan
+#regular7=e5e5e5     # white
+#
+### Bright colors (color palette 8-15)
+#bright0=666666      # bright black
+#bright1=ff00a0      # bright red
+#bright2=ccff00      # bright green
+#bright3=ff9f00      # bright yellow
+#bright4=48c6ff      # bright blue
+#bright5=be67e1      # bright magenta
+#bright6=63e7f0      # bright cyan
+#bright7=f3f3f3      # bright white
 
 ## dimmed colors (see foot.ini(5) man page)
 # dim0=<not set>
