--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -49,6 +49,13 @@ sub-fix-timing=yes
 osd-font-size=35
 
 
+# a profile that can be enabled with --profile=big-cache
+[big-cache]
+cache=yes
+demuxer-max-bytes=500M
+demuxer-readahead-secs=20
+
+
 [ww-ext-image]
 image-display-duration=inf
 loop-file=inf
