--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -18,7 +18,7 @@ screenshot-png-compression=3
 
 ## yt-dlp
 hls-bitrate=max
-ytdl-format=bestvideo[height<=?1080][vcodec!=vp9]+bestaudio/bestvideo+bestaudio/best
+#ytdl-format=bestvideo[height<=?1080]+bestaudio/bestvideo+bestaudio/best
 ##script-opts-append=ytdl_hook-ytdl_path=yt-dlp
 #load-unsafe-playlists=no
 
@@ -54,6 +54,9 @@ osd-font-size=35
 cache=yes
 demuxer-max-bytes=500M
 demuxer-readahead-secs=20
+
+# make it default
+#profile=big-cache
 
 
 [ww-ext-image]
