--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -8,10 +8,10 @@
 # title=foot
 # locked-title=no
 
-font=JetBrains Mono :style=Regular:size=12
-font-bold=JetBrains Mono :style=Bold:size=12
-font-italic=JetBrains Mono :style=Italic:size=12
-font-bold-italic=JetBrains Mono :style=Bold Italic:size=12
+font=JetBrainsMono Nerd FontMono:style=Regular:size=12
+font-bold=JetBrainsMono Nerd FontMono:style=Bold:size=12
+font-italic=JetBrainsMono Nerd FontMono:style=Italic:size=12
+font-bold-italic=JetBrainsMono Nerd FontMono:style=Bold Italic:size=12
 # line-height=<font metrics>
 # letter-spacing=0
 # horizontal-letter-offset=0
@@ -64,24 +64,42 @@ color=1c1c1c c5c5c5
 # alternate-scroll-mode=yes
 
 [colors]
-foreground=cdd6f4 # Text
-background=1e1e2e # Base
-regular0=45475a   # Surface 1
-regular1=f38ba8   # red
-regular2=a6e3a1   # green
-regular3=f9e2af   # yellow
-regular4=89b4fa   # blue
-regular5=f5c2e7   # pink
-regular6=94e2d5   # teal
-regular7=bac2de   # Subtext 1
-bright0=585b70    # Surface 2
-bright1=f38ba8    # red
-bright2=a6e3a1    # green
-bright3=f9e2af    # yellow
-bright4=89b4fa    # blue
-bright5=f5c2e7    # pink
-bright6=94e2d5    # teal
-bright7=a6adc8    # Subtext 0
+# foreground=cdd6f4 # Text
+# background=1e1e2e # Base
+# regular0=45475a   # Surface 1
+# regular1=f38ba8   # red
+# regular2=a6e3a1   # green
+# regular3=f9e2af   # yellow
+# regular4=89b4fa   # blue
+# regular5=f5c2e7   # pink
+# regular6=94e2d5   # teal
+# regular7=bac2de   # Subtext 1
+# bright0=585b70    # Surface 2
+# bright1=f38ba8    # red
+# bright2=a6e3a1    # green
+# bright3=f9e2af    # yellow
+# bright4=89b4fa    # blue
+# bright5=f5c2e7    # pink
+# bright6=94e2d5    # teal
+# bright7=a6adc8    # Subtext 0
+background=1a1b26
+foreground=c0caf5
+regular0=15161E
+regular1=f7768e
+regular2=9ece6a
+regular3=e0af68
+regular4=7aa2f7
+regular5=bb9af7
+regular6=7dcfff
+regular7=a9b1d6
+bright0=414868
+bright1=f7768e
+bright2=9ece6a
+bright3=e0af68
+bright4=7aa2f7
+bright5=bb9af7
+bright6=7dcfff
+bright7=c0caf5
 
 #[colors]
 ## alpha=1.0
