--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -20,7 +20,7 @@
   ],
 
   "sway/workspaces": {
-     "disable-scroll": true,
+    "disable-scroll": true
   },
 
   // Modules configuration
@@ -30,8 +30,8 @@
   },
   "battery": {
     "states": {
-      // "good": 95,
-      "warning": 30,
+      "good": 80,
+      "warning": 20,
       "critical": 15
     },
     "format": "{icon} {capacity}%",
@@ -77,10 +77,9 @@
   "network": {
     //"interface": "wlo1", // (Optional) To force the use of this interface
     "interval": 2,
-//    "format-wifi": "󰤨 {essid} {signalStrength}%",
-    "format-wifi": " {bandwidthDownBits} | ︁ {bandwidthUpBits}",
-
-    "format-ethernet": "{ipaddr}/{cidr} ",
+    //"format-wifi": "󰤨 {essid} {signalStrength}%",
+    "format-wifi": " {bandwidthDownBytes} | ︁ {bandwidthUpBytes}",
+    "format-ethernet": " {bandwidthDownBytes} | ︁ {bandwidthUpBytes}",
     "tooltip-format": "{ifname} via {gwaddr} ",
     "format-linked": "{ifname} (No IP) ",
     "format-disconnected": "Disconnected",
