--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -7,7 +7,6 @@ exec-once=waybar
 exec-once=foot --server
 exec-once=playerctld daemon
 exec-once=swaync
-exec-once=gt --ip 12.0.0.1 --port 8000 --silent
 exec-once=swaybg -i ~/Pictures/Wallpapers/wallpaper
 #exec-once=swayidle -w timeout 290 'notify-send "Locking screen in 10 seconds" ' timeout 300 'swaylock -f' timeout 310 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' before-sleep 'swaylock -f'
 exec-once=swayidle -w timeout 290 'notify-send "Locking screen in 10 seconds" ' timeout 300 'swaylock -f' before-sleep 'swaylock -f'
@@ -16,8 +15,8 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 
-#monitor=,preferred,auto,1
-monitor=,1366x768@60,0x0,1
+monitor=,preferred,auto,1
+#monitor=,1920x1080@60,0x0,1
 workspace=DP-1,1
 
 input {
@@ -32,11 +31,11 @@ input {
 
     touchpad {
         natural_scroll=yes
-        disable_while_typing=no
+        disable_while_typing=yes
     }
 
     force_no_accel=true
-    sensitivity=1.0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity=0 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
@@ -46,9 +45,7 @@ general {
     col.active_border=0xff9399b2
     col.inactive_border=0xff1e1e2e
 
-    apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
-
-    damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
+    layout = dwindle
 }
 
 decoration {
@@ -57,34 +54,42 @@ decoration {
 #    blur_size=3 # minimum 1
 #    blur_passes=1 # minimum 1
 #    blur_new_optimizations=1
-    rounding=12
-    multisample_edges=true
+    rounding=8
     blur=true
-    blur_size=12 # minimum 1
-    blur_passes=3 # minimum 1
-    blur_new_optimizations=1
+    blur_size=3 # minimum 1
+    blur_passes=1 # minimum 1
+    blur_new_optimizations=true
     drop_shadow=true
-    shadow_range=20
+    shadow_range=3
     shadow_render_power	= 3
     dim_inactive = true
     dim_strength = .105
+    col.shadow = rgba(1a1a1aee)
 }
 
 animations {
-    enabled=1
-    animation=windows,1,7,default
-    animation=border,1,10,default
-    animation=fade,1,10,default
-    animation=workspaces,1,6,default
+    enabled = true
+
+    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+
+    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+
+    animation = windows, 1, 7, myBezier
+    animation = windowsOut, 1, 7, default, popin 80%
+    animation = border, 1, 10, default
+    animation = borderangle, 1, 8, default
+    animation = fade, 1, 7, default
+    animation = workspaces, 1, 6, default
+
 }
 
 dwindle {
-    pseudotile=0 # enable pseudotiling on dwindle
-    preserve_split=true
+    pseudotile = true # enable pseudotiling on dwindle
+    preserve_split = true
 }
 
 gestures {
-    workspace_swipe=yes
+    workspace_swipe = true
 }
 
 # example window rules
@@ -97,89 +102,89 @@ gestures {
 #windowrule=monitor 0,xyz
 
 # some nice mouse binds
-bindm=SUPER,mouse:272,movewindow
-bindm=SUPER,mouse:273,resizewindow
+bindm=SUPER, mouse:272, movewindow
+bindm=SUPER, mouse:273, resizewindow
 
 # example binds
 bind=SUPER,X,exec,waylogout --hide-cancel --screenshots --font="Baloo 2" --effect-blur=7x5 --indicator-thickness=10 --ring-color=888888aa --inside-color=1a1a1aff --text-color=eaeaeaaa --line-color=00000000 --ring-selection-color=ff5500aa --inside-selection-color=1a1a1aff --text-selection-color=eaeaeaaa --line-selection-color=00000000 --lock-command="/sbin/swaylock" --logout-command="/sbin/swaymsg exit" --poweroff-command="/sbin/shutdown -a now" --reboot-command="/sbin/shutdown -r now" --selection-label
 
-bind=SUPER,T,exec,foot
-bind=SUPER,Q,killactive,
-bind=SUPERSHIFT,E,exit,
-bind=SUPER,F,togglefloating,
-bind=SUPERSHIFT,F,fullscreen,0
-bind=ALT,Tab,cyclenext
-bind=SUPER,E,exec,dolphin
-bind=SUPER,SPACE,togglefloating,
-bind=SUPER,R,exec,fuzzel -i Tela-circle-dark -b 1a1a1aff --font='Hack:weight=bold:size=13'
-bind=SUPER,P,pseudo,
+bind = SUPER, T, exec, foot
+bind = SUPER, Q, killactive,
+bind = SUPERSHIFT, E, exit,
+bind = SUPER, F, togglefloating,
+bind = SUPERSHIFT, F, fullscreen,0
+bind = ALT, Tab, cyclenext
+bind = SUPER, E, exec, dolphin
+bind = SUPER, SPACE, togglefloating,
+bind = SUPER, R, exec, fuzzel -i Tela-circle-dark -b 1a1a1aff --font='Hack:weight=bold:size=13'
+bind = SUPER, P, pseudo,
 
-bind=SUPER,left,movefocus,l
-bind=SUPER,H,movefocus,l
+bind = SUPER, left, movefocus, l
+bind = SUPER, H, movefocus, l
 
-bind=SUPER,right,movefocus,r
-bind=SUPER,L,movefocus,r
+bind = SUPER, right, movefocus, r
+bind = SUPER, L, movefocus, r
 
-bind=SUPER,up,movefocus,u
-bind=SUPER,K,movefocus,u
+bind = SUPER, up, movefocus,u
+bind = SUPER, K, movefocus, u
 
-bind=SUPER,down,movefocus,d
-bind=SUPER,J,movefocus,d
+bind = SUPER, down, movefocus,d
+bind = SUPER, J, movefocus, d
 
-bind=SUPER,1,workspace,1
-bind=SUPER,2,workspace,2
-bind=SUPER,3,workspace,3
-bind=SUPER,4,workspace,4
-bind=SUPER,5,workspace,5
-bind=SUPER,6,workspace,6
-bind=SUPER,7,workspace,7
-bind=SUPER,8,workspace,8
-bind=SUPER,9,workspace,9
-bind=SUPER,0,workspace,10
+bind = SUPER,1,workspace,1
+bind = SUPER,2,workspace,2
+bind = SUPER,3,workspace,3
+bind = SUPER,4,workspace,4
+bind = SUPER,5,workspace,5
+bind = SUPER,6,workspace,6
+bind = SUPER,7,workspace,7
+bind = SUPER,8,workspace,8
+bind = SUPER,9,workspace,9
+bind = SUPER,0,workspace,10
 
-bind=SUPERSHIFT,1,movetoworkspace,1
-bind=SUPERSHIFT,2,movetoworkspace,2
-bind=SUPERSHIFT,3,movetoworkspace,3
-bind=SUPERSHIFT,4,movetoworkspace,4
-bind=SUPERSHIFT,5,movetoworkspace,5
-bind=SUPERSHIFT,6,movetoworkspace,6
-bind=SUPERSHIFT,7,movetoworkspace,7
-bind=SUPERSHIFT,8,movetoworkspace,8
-bind=SUPERSHIFT,9,movetoworkspace,9
-bind=SUPERSHIFT,0,movetoworkspace,10
+bind = SUPERSHIFT,1,movetoworkspace,1
+bind = SUPERSHIFT,2,movetoworkspace,2
+bind = SUPERSHIFT,3,movetoworkspace,3
+bind = SUPERSHIFT,4,movetoworkspace,4
+bind = SUPERSHIFT,5,movetoworkspace,5
+bind = SUPERSHIFT,6,movetoworkspace,6
+bind = SUPERSHIFT,7,movetoworkspace,7
+bind = SUPERSHIFT,8,movetoworkspace,8
+bind = SUPERSHIFT,9,movetoworkspace,9
+bind = SUPERSHIFT,0,movetoworkspace,10
 
-bind=SUPER,mouse_down,workspace,e+1
-bind=SUPER,mouse_up,workspace,e-1
+bind = SUPER,mouse_down,workspace,e+1
+bind = SUPER,mouse_up,workspace,e-1
 
 #reload hyprland
-bind=SUPERSHIFT,R,exec,hyprctl reload
+bind = SUPERSHIFT, R, exec, hyprctl reload
 
 ## Brightness
-bind=,XF86MonBrightnessUp,exec,brightnessctl set +5%
-bind=,XF86MonBrightnessDown,exec,brightnessctl set 5%-
+bind =, XF86MonBrightnessUp, exec, brightnessctl set +5%
+bind =, XF86MonBrightnessDown, exec, brightnessctl set 5%-
 
 
 ## Media player controls
-bind=,XF86AudioPlay,exec,playerctl play-pause
-bind=,XF86AudioPause,exec,playerctl play-pause
-bind=,XF86AudioNext,exec,playerctl next
-bind=,XF86AudioPrev,exec,playerctl previous
+bind =, XF86AudioPlay, exec, playerctl play-pause
+bind =, XF86AudioPause, exec, playerctl play-pause
+bind =, XF86AudioNext, exec, playerctl next
+bind =, XF86AudioPrev, exec, playerctl previous
 
 
 # Volume
-bind=,XF86AudioRaiseVolume,exec,pamixer -i 2
-bind=,XF86AudioLowerVolume,exec,pamixer -d 2
-bind=,XF86AudioMute,exec,pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind=SUPERSHIFT,M,exec,pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind=,XF86AudioMicMute,exec,pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bind =, XF86AudioRaiseVolume, exec, pamixer -i 2
+bind =, XF86AudioLowerVolume, exec, pamixer -d 2
+bind =, XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = SUPERSHIFT, M, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind =, XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 
 # Screenshots
-bind=,Print,exec,grimshot --notify save screen
-bind=SUPER,Print,exec,grimshot --notify copy screen
-bind=SUPERSHIFT,S,exec,grimshot --notify copy area
+bind = , Print, exec, grimshot --notify save screen
+bind = SUPER,Print, exec, grimshot --notify copy screen
+bind = SUPERSHIFT, S, exec, grimshot --notify copy area
 
 
 #Windows Rules
-windowrule=float,^(connman-gtk)$
+windowrule=float, ^(connman-gtk)$
 
